# rosetta

./: .gitignore  CMakeLists.txt  README.md  main.cpp  rosetta.crt  rosetta.key  run-stress-test.sh  stress-test.sh
common/include/: base64.hpp  configuration.hpp  configuration_exception.hpp  date.hpp  exceptional_executor.hpp  http_envelope.hpp  match_condition.hpp  rosetta_exception.hpp  sha1.hpp  string_helper.hpp
common/src/: base64.cpp  configuration.cpp  date.cpp  exceptional_executor.cpp  http_envelope.cpp  sha1.cpp  string_helper.cpp
error-pages/: 401.html  403.html  404.html  405.html  413.html  414.html  500.html  501.html
http/include/: multi_thread_server.hpp  server.hpp
http/include/connection/: connection.hpp  create_request_handler.hpp  request.hpp  request_envelope.hpp  rosetta_socket.hpp
http/include/exceptions/: argument_exception.hpp  request_exception.hpp  server_exception.hpp
http/include/helpers/: date.hpp  match_condition.hpp
http/src/: multi_thread_server.cpp  server.cpp
http/src/connection/: connection.cpp  create_request_handler.cpp  request.cpp  request_envelope.cpp
http/src/helpers/: date.cpp
http_server/include/: multi_thread_server.hpp  server.hpp
http_server/include/auth/: authentication.hpp  authorization.hpp
http_server/include/connection/: connection.hpp  create_request_handler.hpp  request.hpp  request_envelope.hpp  rosetta_socket.hpp
http_server/include/exceptions/: argument_exception.hpp  request_exception.hpp  security_exception.hpp  server_exception.hpp
http_server/include/helpers/: date.hpp  match_condition.hpp  uri_encode.hpp
http_server/src/: multi_thread_server.cpp  server.cpp
http_server/src/auth/: authentication.cpp  authorization.cpp
http_server/src/connection/: connection.cpp  create_request_handler.cpp  request.cpp  request_envelope.cpp  rosetta_socket.cpp
http_server/src/helpers/: date.cpp  uri_encode.cpp
server/: main.cpp
server/include/: multi_thread_server.hpp  server.hpp  single_thread_server.hpp
server/include/connection/: connection.hpp  create_request_handler.hpp  (+7 more)
server/src/: multi_thread_server.cpp  server.cpp  single_thread_server.cpp
www-root/: foo.html  index.html
www-root/media/: main.css  menu.js
(+91 files in other folders)
